<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/sh_fr_white_translucent_back_black_translucent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_contacts"
        style="@style/montserrat_light"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/fragment_pickup__name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/sh_fr_white_back_transparent_radius_5dp"
        android:hint="@string/cart_name"
        android:textColorHint="@color/white"
        style="@style/montserrat_light"
        android:textSize="12sp"
        android:gravity="left"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:paddingStart="5dp"
        />

    <EditText
        android:id="@+id/fragment_pickup__phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@drawable/sh_fr_white_back_transparent_radius_5dp"
        android:hint="@string/cart_phone"
        android:textColorHint="@color/white"
        style="@style/montserrat_light"
        android:textSize="12sp"
        android:gravity="left"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:paddingStart="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_date_time"
        style="@style/montserrat_light"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <fragment
        android:id="@+id/delivery__calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.nastoyshiishashlik.fragments.CalendarFragment"
        tools:layout="@layout/fragment_calendar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_payment"
        style="@style/montserrat_light"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <fragment
        android:id="@+id/delivery__payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:name="com.example.nastoyshiishashlik.fragments.DeliveryPaymentFragment"
        tools:layout="@layout/fragment_delivery_payment_test"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/fragment_pickup__check_box_dishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyCheckBox"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_dishes"
            style="@style/montserrat_light"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:id="@+id/fragment_pickup__ll_dishes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/sh_fr_white_back_transparent_radius_5dp">

                <ImageButton
                    android:id="@+id/fragment_pickup__minus"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_horizontal_rule_24"
                    android:backgroundTint="@color/transparent"
                    android:onClick="onClickMinus"/>


                <View
                    android:layout_width="1sp"
                    android:background="@color/white"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"/>

                <TextView
                    android:id="@+id/fragment_pickup__quantity_dishes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1sp"
                    android:background="@color/white"
                    android:layout_height="match_parent"
                    android:paddingEnd="10dp"/>

                <ImageButton
                    android:id="@+id/fragment_delivery__plus"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_add_24"
                    android:backgroundTint="@color/transparent"
                    android:onClick="onClickPlus"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_dishes2"
                style="@style/montserrat_light"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>



    </LinearLayout>

    <EditText
        android:id="@+id/fragment_pickup__message"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:background="@drawable/sh_fr_white_back_transparent_radius_5dp"
        android:hint="@string/cart_comment"
        android:textColorHint="@color/white"
        style="@style/montserrat_light"
        android:textSize="12sp"
        android:gravity="left"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cart_price"
        style="@style/montserrat_light"
        android:textSize="21sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/fragment_pickup__final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Сумма"
        style="@style/montserrat_bold"
        android:textSize="21sp" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingEnd="35dp"
        android:paddingStart="35dp"
        style="@style/style_button"
        android:text="@string/cart_button_order"
        />
</LinearLayout>