<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/fragment_cart__main_rel_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/fragment_container_view_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.nastoyshiishashlik.fragments.HeaderButtonFragment"
            tools:layout="@layout/fragment_header_button"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/cart_activity_ns"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/sh_fr_white_translucent_back_black_translucent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp">

                    <RelativeLayout
                        android:id="@+id/cart__list_products"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </androidx.recyclerview.widget.RecyclerView>

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/cart__empty_basket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/montserrat_medium"
                            android:text="@string/cart_empty_basket"
                            android:layout_margin="10dp"/>
                        <View
                            android:id="@+id/cart__horizontal_line"
                            android:layout_width="match_parent"
                            android:background="@color/white_translucent"
                            android:layout_height="2sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="end"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cart_delivery"
                                style="@style/montserrat_light"/>

                            <TextView
                                android:id="@+id/delivery"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="70 грн"
                                style="@style/montserrat_bold"
                                android:layout_marginStart="5dp"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cart_price"
                                style="@style/montserrat_light"/>
                            <TextView
                                android:id="@+id/total_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0 грн"
                                style="@style/montserrat_bold"
                                android:layout_marginStart="5dp"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_ordering"
                    style="@style/montserrat_light"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/cart__delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/frame_translucent_no_padding"
                        android:text="@string/cart_delivery1"
                        style="@style/montserrat_light"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:onClick="onDeliveryClick"/>

                    <TextView
                        android:id="@+id/cart__pickup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/frame_translucent_no_padding"
                        android:text="@string/cart_pickup"
                        style="@style/montserrat_light"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:onClick="onPickupClick"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pickup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cart_pickup_txt"
                        style="@style/montserrat_bold"
                        android:textSize="11sp"
                        android:gravity="left"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cart_pickup_txt2"
                        style="@style/montserrat_bold"
                        android:textSize="11sp"
                        android:gravity="left" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <fragment
                    android:id="@+id/fragment_cart__bottom_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.example.nastoyshiishashlik.fragments.BottomMenuFragment"
                    tools:layout="@layout/bottom_menu"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/toUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_up"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        />
</RelativeLayout>