<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/sh_fr_white_back_transparent_radius_5dp">

    <LinearLayout
        android:id="@+id/fragment_delivery_payment_test__ll_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_delivery_payment_test__text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cart_payment_cash"
            android:ellipsize="marquee"
            style="@style/montserrat_light"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:id="@+id/fragment_delivery_payment_test__ll_arrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClickArrow">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_drop_down_arrow" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_delivery_payment_test__ll_choice_delivery"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/fragment_delivery_payment_test__tv_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/cart_payment_cash"
            android:ellipsize="marquee"
            style="@style/montserrat_light"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:onClick="onClickCash"
            />

        <View
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="1sp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/fragment_delivery_payment_test__tv_card_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/cart_payment_courier"
            android:ellipsize="marquee"
            style="@style/montserrat_light"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:onClick="OnClickCardDelivery"
            />

        <View
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="1sp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/fragment_delivery_payment_test__tv_card_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/cart_payment_site"
            android:ellipsize="marquee"
            style="@style/montserrat_light"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="OnClickCardSite"
            />

    </LinearLayout>

</RelativeLayout>